--- a/notebook/data2mrc.ipynb
+++ b/notebook/data2mrc.ipynb
@@ -9589,19 +9589,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 410,
    "id": "14a7a5f1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 410,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(df_aug['text'])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 409,
    "id": "3a21f468",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[186839    帮 我 定位系统 导航 一下 合肥 到 郑州 的 路线 怎么走 。\n",
+       " 73306     创建 一下 11 号 上午 9 点去 医院 取 结果 的 提醒 。\n",
+       " 32666                我 在 闹钟 不要 今天下午 22 点 响起\n",
+       " 85438                          看看 到 中关村 怎么走\n",
+       " 6688                       播放 欧美 动漫 精灵 鼠 小弟\n",
+       "                         ...                \n",
+       " 79633                         播 一首 王安石 的 梅花\n",
+       " 53484                             明天 是 星期 几\n",
+       " 49023                播放 重播 韩力 主持 的 北京 音乐 广播\n",
+       " 155513           举办 青岛市 2018 年 中职 学校 招生 咨询会\n",
+       " 66434          立刻 请 你 告诉 我 知道 中秋节 到底 假如 星期二\n",
+       " Name: text, Length: 150960, dtype: object,\n",
+       " 94977                         号 我 12 月 15 关掉 到 20 号 的 所有 日程\n",
+       " 97567                               十分钟 后 把 微波炉 的 饭菜 热 一下 吧\n",
+       " 138203                         可以 来 一个 周星驰 拍 的 香港 那边 的 电影 吗\n",
+       " 154159                    请 的 我 答案 阴历 告诉 几月 几号 是 12 月 5 日 啊\n",
+       " 166072    2018 英菲迪尼 QX80 外观 家族式 语言 设计 ， 5.6 升 V8 引擎 油耗 巨增 ？\n",
+       "                                 ...                        \n",
+       " 28755                           查 查看 中国 的 阴历 5 月 18 是 哪一天 呢\n",
+       " 38945                                       伦敦 上周五 是 刮 北风 吗\n",
+       " 170010                                 如何 才能 早恋 对 学习 的 影响 ？\n",
+       " 49493                                       抗日战争 纪念日 是 几号 ？\n",
+       " 158457                          远离 置业 误区 的 ， 大 技巧 6 新手 必看 ！\n",
+       " Name: text, Length: 37740, dtype: object,\n",
+       " 186839    11\n",
+       " 73306      7\n",
+       " 32666      7\n",
+       " 85438      2\n",
+       " 6688       6\n",
+       "           ..\n",
+       " 79633      9\n",
+       " 53484      3\n",
+       " 49023     10\n",
+       " 155513    11\n",
+       " 66434      3\n",
+       " Name: label, Length: 150960, dtype: int64,\n",
+       " 94977      7\n",
+       " 97567      1\n",
+       " 138203     4\n",
+       " 154159     3\n",
+       " 166072    11\n",
+       "           ..\n",
+       " 28755      3\n",
+       " 38945      5\n",
+       " 170010    11\n",
+       " 49493      3\n",
+       " 158457    11\n",
+       " Name: label, Length: 37740, dtype: int64]"
+      ]
+     },
+     "execution_count": 409,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "train_test_split(df_aug['text'], df_aug['label'], test_size=0.2, stratify=df_aug['label'])"
+   ]
   },
   {
    "cell_type": "code",
