--- a/notebook/data2mrc.ipynb
+++ b/notebook/data2mrc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 1,
    "id": "3ef54f1c",
    "metadata": {},
    "outputs": [],
@@ -3170,7 +3170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "id": "87c8ba7d",
    "metadata": {},
    "outputs": [
@@ -3180,7 +3180,7 @@
        "['query_type', 'play_mode', 'command', 'index', 'language', 'type']"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3823,7 +3823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "89a1b7d0",
    "metadata": {},
    "outputs": [
@@ -3831,49 +3831,49 @@
      "data": {
       "text/plain": [
        "defaultdict(list,\n",
-       "            {'Travel-Query': ['datetime_date',\n",
+       "            {'Travel-Query': ['query_type',\n",
        "              'departure',\n",
-       "              'datetime_time',\n",
        "              'destination',\n",
-       "              'query_type'],\n",
-       "             'Music-Play': ['language',\n",
+       "              'datetime_date',\n",
+       "              'datetime_time'],\n",
+       "             'Music-Play': ['artist',\n",
        "              'instrument',\n",
-       "              'play_mode',\n",
-       "              'artist',\n",
        "              'age',\n",
        "              'album',\n",
+       "              'play_mode',\n",
+       "              'language',\n",
        "              'song'],\n",
-       "             'FilmTele-Play': ['name',\n",
+       "             'FilmTele-Play': ['play_setting',\n",
        "              'artist',\n",
-       "              'play_setting',\n",
+       "              'name',\n",
        "              'age',\n",
-       "              'region',\n",
-       "              'tag'],\n",
-       "             'Video-Play': ['name',\n",
-       "              'region',\n",
+       "              'tag',\n",
+       "              'region'],\n",
+       "             'Video-Play': ['datetime_date',\n",
        "              'datetime_time',\n",
-       "              'datetime_date'],\n",
-       "             'Radio-Listen': ['name', 'frequency', 'artist', 'channel'],\n",
-       "             'HomeAppliance-Control': ['appliance', 'details', 'command'],\n",
-       "             'Weather-Query': ['index',\n",
+       "              'region',\n",
+       "              'name'],\n",
+       "             'Radio-Listen': ['frequency', 'artist', 'channel', 'name'],\n",
+       "             'HomeAppliance-Control': ['appliance', 'command', 'details'],\n",
+       "             'Weather-Query': ['city',\n",
+       "              'index',\n",
+       "              'type',\n",
        "              'datetime_date',\n",
-       "              'datetime_time',\n",
-       "              'city',\n",
-       "              'type'],\n",
-       "             'Alarm-Update': ['datetime_time', 'notes', 'datetime_date'],\n",
+       "              'datetime_time'],\n",
+       "             'Alarm-Update': ['datetime_date', 'datetime_time', 'notes'],\n",
        "             'Calendar-Query': ['datetime_date'],\n",
-       "             'TVProgram-Play': ['name',\n",
+       "             'TVProgram-Play': ['datetime_date',\n",
        "              'datetime_time',\n",
        "              'channel',\n",
-       "              'datetime_date'],\n",
-       "             'Audio-Play': ['name',\n",
-       "              'language',\n",
+       "              'name'],\n",
+       "             'Audio-Play': ['play_setting',\n",
        "              'artist',\n",
-       "              'play_setting',\n",
-       "              'tag']})"
+       "              'name',\n",
+       "              'tag',\n",
+       "              'language']})"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3893,41 +3893,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "10f670ec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['name',\n",
-       " 'language',\n",
-       " 'departure',\n",
-       " 'region',\n",
-       " 'datetime_date',\n",
-       " 'play_mode',\n",
-       " 'play_setting',\n",
-       " 'type',\n",
-       " 'tag',\n",
-       " 'song',\n",
-       " 'command',\n",
-       " 'destination',\n",
+       "['artist',\n",
        " 'appliance',\n",
-       " 'channel',\n",
-       " 'album',\n",
+       " 'departure',\n",
+       " 'destination',\n",
        " 'index',\n",
        " 'instrument',\n",
+       " 'tag',\n",
+       " 'album',\n",
+       " 'play_mode',\n",
        " 'datetime_time',\n",
-       " 'notes',\n",
-       " 'details',\n",
-       " 'artist',\n",
+       " 'command',\n",
        " 'city',\n",
-       " 'frequency',\n",
        " 'query_type',\n",
-       " 'age']"
+       " 'play_setting',\n",
+       " 'details',\n",
+       " 'name',\n",
+       " 'region',\n",
+       " 'datetime_date',\n",
+       " 'language',\n",
+       " 'song',\n",
+       " 'frequency',\n",
+       " 'age',\n",
+       " 'type',\n",
+       " 'channel',\n",
+       " 'notes']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3943,35 +3943,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 10,
    "id": "692f971a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['name',\n",
+       "['artist',\n",
+       " 'appliance',\n",
        " 'departure',\n",
+       " 'destination',\n",
+       " 'instrument',\n",
+       " 'tag',\n",
+       " 'album',\n",
+       " 'datetime_time',\n",
+       " 'city',\n",
+       " 'play_setting',\n",
+       " 'details',\n",
+       " 'name',\n",
        " 'region',\n",
        " 'datetime_date',\n",
-       " 'play_setting',\n",
-       " 'tag',\n",
        " 'song',\n",
-       " 'destination',\n",
-       " 'appliance',\n",
-       " 'channel',\n",
-       " 'album',\n",
-       " 'instrument',\n",
-       " 'datetime_time',\n",
-       " 'notes',\n",
-       " 'details',\n",
-       " 'artist',\n",
-       " 'city',\n",
        " 'frequency',\n",
-       " 'age']"
+       " 'age',\n",
+       " 'channel',\n",
+       " 'notes']"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3983,35 +3983,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 11,
    "id": "8205ec69",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 0,\n",
-       " 'departure': 1,\n",
-       " 'region': 2,\n",
-       " 'datetime_date': 3,\n",
-       " 'play_setting': 4,\n",
+       "{'artist': 0,\n",
+       " 'appliance': 1,\n",
+       " 'departure': 2,\n",
+       " 'destination': 3,\n",
+       " 'instrument': 4,\n",
        " 'tag': 5,\n",
-       " 'song': 6,\n",
-       " 'destination': 7,\n",
-       " 'appliance': 8,\n",
-       " 'channel': 9,\n",
-       " 'album': 10,\n",
-       " 'instrument': 11,\n",
-       " 'datetime_time': 12,\n",
-       " 'notes': 13,\n",
-       " 'details': 14,\n",
-       " 'artist': 15,\n",
-       " 'city': 16,\n",
-       " 'frequency': 17,\n",
-       " 'age': 18}"
+       " 'album': 6,\n",
+       " 'datetime_time': 7,\n",
+       " 'city': 8,\n",
+       " 'play_setting': 9,\n",
+       " 'details': 10,\n",
+       " 'name': 11,\n",
+       " 'region': 12,\n",
+       " 'datetime_date': 13,\n",
+       " 'song': 14,\n",
+       " 'frequency': 15,\n",
+       " 'age': 16,\n",
+       " 'channel': 17,\n",
+       " 'notes': 18}"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4023,37 +4023,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 4,
    "id": "299c756b",
    "metadata": {},
    "outputs": [],
    "source": [
     "query_map = {\n",
-    "    'name': '用以识别某一个体或群体(人和事物)的专属名词',\n",
-    "    'datetime_date': '发生某一事情的确定的日子或时期',\n",
-    "    'departure': '出发的地方',\n",
-    "    'instrument': '用来演奏的乐器',\n",
-    "    'datetime_time': '物质的永恒运动、变化的持续性、顺序性的表现',\n",
-    "    'destination': '想要达到的地方',\n",
-    "    'appliance': '工作时所需用的器具',\n",
-    "    'notes': '听课、听报告、读书时所做的记录',\n",
-    "    'details': '所完成的具体的事或行动',\n",
-    "    'play_setting': '播放的方式',\n",
-    "    'artist': '杂技、戏曲、民间歌舞、曲艺演员',\n",
-    "    'city': '人口集中，居民以非农业人口为主，工商业比较发达的地区',\n",
-    "    'frequency': '每个对象出现的次数与总次数的比值',\n",
-    "    'channel': '电视台或电视网络',\n",
-    "    'age': '具体的年份日期',\n",
-    "    'album': '歌曲集合或专辑',\n",
-    "    'tag': '具有相同特征的事物所形成的类别',\n",
-    "    'song': '用来歌唱的音乐或歌曲',\n",
-    "    'region': '某一范围的地方'\n",
+    "    'name': '一',\n",
+    "    'datetime_date': '二',\n",
+    "    'departure': '三',\n",
+    "    'instrument': '四',\n",
+    "    'datetime_time': '五',\n",
+    "    'destination': '六',\n",
+    "    'appliance': '七',\n",
+    "    'notes': '八',\n",
+    "    'details': '九',\n",
+    "    'play_setting': '十',\n",
+    "    'artist': '十一',\n",
+    "    'city': '十二',\n",
+    "    'frequency': '十三',\n",
+    "    'channel': '十四',\n",
+    "    'age': '十五',\n",
+    "    'album': '十六',\n",
+    "    'tag': '十七',\n",
+    "    'song': '十八',\n",
+    "    'region': '十九'\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 5,
    "id": "db7be0df",
    "metadata": {},
    "outputs": [],
@@ -4099,7 +4099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 12,
    "id": "499dd964",
    "metadata": {},
    "outputs": [],
@@ -4264,7 +4264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 13,
    "id": "154d7153",
    "metadata": {},
    "outputs": [],
@@ -4276,24 +4276,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 14,
    "id": "51ddd865",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('/root/EarleeNLP/data/datafountain/mrc_ner.train', 'w') as f:\n",
+    "with open('/root/EarleeNLP/data/datafountain/mrc_ner_index.train', 'w') as f:\n",
     "    json_data = json.dumps(res_mrc_train, ensure_ascii=False)\n",
     "    f.write(json_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 15,
    "id": "216fc858",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('/root/EarleeNLP/data/datafountain/mrc_ner.test', 'w') as f:\n",
+    "with open('/root/EarleeNLP/data/datafountain/mrc_ner_index.test', 'w') as f:\n",
     "    json_data = json.dumps(res_mrc_test, ensure_ascii=False)\n",
     "    f.write(json_data)"
    ]
@@ -9687,11 +9687,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "7b8dce34",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "512/64"
+   ]
   },
   {
    "cell_type": "code",
