--- a/notebook/ood.ipynb
+++ b/notebook/ood.ipynb
@@ -6764,7 +6764,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "63d96107",
+   "id": "c6fb8eab",
    "metadata": {},
    "outputs": [
     {
@@ -9875,7 +9875,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "242ee9e0",
+   "id": "f623cb43",
    "metadata": {},
    "outputs": [
     {
@@ -10003,7 +10003,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "598a94df",
+   "id": "05c2375d",
    "metadata": {},
    "outputs": [
     {
@@ -22028,7 +22028,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "6e3f547e",
+   "id": "6994ddb6",
    "metadata": {},
    "outputs": [
     {
@@ -22157,7 +22157,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "456bdcab",
+   "id": "75902863",
    "metadata": {},
    "outputs": [
     {
@@ -22178,7 +22178,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "3a4638dc",
+   "id": "e05780c0",
    "metadata": {},
    "outputs": [
     {
@@ -22297,7 +22297,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "c1d17cea",
+   "id": "4136c7ec",
    "metadata": {},
    "outputs": [
     {
@@ -22417,7 +22417,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "348a1991",
+   "id": "ff5dbb6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22426,8 +22426,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "5a265ee1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "9d0f3f0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = defaultdict(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "3dccdde1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x['e'] += 0.7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93a5bcd6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8907fa46",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9aa8339",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c942403",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a088def1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b56c11d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "990c31ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79163d0a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45fe9a07",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49add5fa",
    "metadata": {},
    "outputs": [],
    "source": []
