--- a/notebook/data-preprocess.ipynb
+++ b/notebook/data-preprocess.ipynb
@@ -2786,7 +2786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "5d77ebcf",
    "metadata": {},
    "outputs": [
@@ -3796,7 +3796,7 @@
        " ...}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3809,7 +3809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "003a04ae",
    "metadata": {},
    "outputs": [],
@@ -3828,12 +3828,14 @@
     "    for i in candidate_letter_list:\n",
     "        text = text.replace(i, '@')\n",
     "        \n",
+    "    text = text.replace(' ', '&')\n",
+    "        \n",
     "    return text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "bf33049f",
    "metadata": {},
    "outputs": [],
@@ -3841,7 +3843,7 @@
     "with open('/ai/223/person/lichunyu/datasets/dataf/test/test_A_text.seq', 'w') as f:\n",
     "    for idx, info_dict in a_text.items():\n",
     "        text = normalization(info_dict['text'])\n",
-    "        text = text.replace(' ', '')\n",
+    "#         text = text.replace(' ', '')\n",
     "        for char in text:\n",
     "            f.write(char + '\\t' + 'O' + '\\n')\n",
     "            \n",
