--- a/notebook/ood.ipynb
+++ b/notebook/ood.ipynb
@@ -6764,7 +6764,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "c6fb8eab",
+   "id": "b1771a10",
    "metadata": {},
    "outputs": [
     {
@@ -9875,7 +9875,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "f623cb43",
+   "id": "dd96a6a7",
    "metadata": {},
    "outputs": [
     {
@@ -10003,7 +10003,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "05c2375d",
+   "id": "fbb27e16",
    "metadata": {},
    "outputs": [
     {
@@ -22028,7 +22028,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "6994ddb6",
+   "id": "5b609c6f",
    "metadata": {},
    "outputs": [
     {
@@ -22157,7 +22157,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "75902863",
+   "id": "beb43d1d",
    "metadata": {},
    "outputs": [
     {
@@ -22178,7 +22178,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "e05780c0",
+   "id": "15af56cb",
    "metadata": {},
    "outputs": [
     {
@@ -22297,7 +22297,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "4136c7ec",
+   "id": "47235ff3",
    "metadata": {},
    "outputs": [
     {
@@ -22417,7 +22417,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "ff5dbb6e",
+   "id": "87514dff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22437,7 +22437,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "9d0f3f0c",
+   "id": "1ee8838b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22447,7 +22447,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "3dccdde1",
+   "id": "3f55f962",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22456,8 +22456,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 71,
+   "id": "19e98257",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(float, {'e': 0.7})"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "a00a8dd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "655b553f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[' ', ' ', ' ', ' ', ' ', ' ']"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = re.compile(' ')\n",
+    "p.findall('s ff s rqws saqe  sa')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "93a5bcd6",
+   "id": "0840551d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -22465,7 +22518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8907fa46",
+   "id": "1c8995c2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -22473,7 +22526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9aa8339",
+   "id": "8c8bbcd4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -22481,7 +22534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c942403",
+   "id": "aa31f417",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -22489,7 +22542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a088def1",
+   "id": "87c101a1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -22497,7 +22550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b56c11d4",
+   "id": "c0169946",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -22505,31 +22558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "990c31ec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "79163d0a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45fe9a07",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49add5fa",
+   "id": "e316d976",
    "metadata": {},
    "outputs": [],
    "source": []
